<resources>
    <string name="app_name">Spymasters</string>
    <string name="finish_game">Finish</string>
    <string name="icon_desc_help">Help</string>
    <string name="icon_desc_menu">Menu</string>
    <string name="icon_desc_pause">Pause/Start</string>
    <string name="icon_desc_timer">Timer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="role">Role</string>
    <string name="category">Category</string>
    <string name="player">Player</string>
    <string name="Category">Category</string>
    <string name="oneOfCategory">Place</string>
    <string name="guess">Guess the place</string>
    <string name="spy">You are a spy</string>
    <string name="go">Go</string>
    <string name="play_button_text">Play</string>
    <string name="rules_button_text">Rules</string>
    <string name="creators_button_text">Creators</string>
    <string name="page_number_text">Page</string>
    <string name="creator_name">Name</string>
    <string name="creator_surname">Surname</string>
    <string name="creator_tg">Telegram</string>
    <string name="btn_back">Back</string>
    <string name="rules_text">Rules</string>
    <string name="addPlayer">Add a player</string>
    <string name="createGame">Create a game</string>
    <string name="select_spy_count">Select the number of spies</string>
    <string name="select_time">Select time</string>
    <string name="players">Players:</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="removePlayer">Kick out a player</string>
    <string name="voting">Voting</string>
    <string name="game_end_win">You guessed it!</string>
    <string name="game_end_loss">You guessed wrong :(</string>
    <string name="game_end_spy_header">The spies were:</string>
    <string name="game_end_menu">Menu</string>
    <string name="game_end_spy_example">Spies...</string>
    <string name="game_end_error">Sorry. Something went wrong... :(</string>
</resources>