<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rules_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/rules_button_text"
        android:transitionName="@string/rules_button_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/rubik_light"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/rules_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:background="@drawable/text_style"
        android:padding="16dp"
        android:layout_margin="12dp"
        android:text="@string/rules_text"
        android:fontFamily="@font/rubik_light"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/page_number_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/next_button"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/home_button"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/next_button"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/back_button"
        android:scaleType="centerInside"
        android:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"/>

    <TextView
        android:id="@+id/page_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_number_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>